--- a/package.json
+++ b/package.json
@@ -80,7 +80,12 @@
     "zod-validation-error": "^3.4.0",
     "tsx": "^4.20.5",
     "typescript": "5.6.3",
-    "esbuild": "^0.25.0"
+    "esbuild": "^0.25.0",
+    "vite": "^7.1.9",
+    "@vitejs/plugin-react": "^5.0.4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.14",
+    "autoprefixer": "^10.4.21"
   },
   "devDependencies": {
     "@replit/vite-plugin-cartographer": "^0.4.4",
@@ -97,13 +102,8 @@
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@types/ws": "^8.5.13",
-    "@vitejs/plugin-react": "^5.0.4",
-    "autoprefixer": "^10.4.21",
-    "cross-env": "^7.0.3",
     "drizzle-kit": "^0.31.4",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.14",
-    "vite": "^7.1.9"
+    "cross-env": "^7.0.3"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
