--- a/package.json
+++ b/package.json
@@ -85,9 +85,7 @@
     "@vitejs/plugin-react": "^5.0.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14",
-    "autoprefixer": "^10.4.21"
-  },
-  "devDependencies": {
+    "autoprefixer": "^10.4.21",
     "@replit/vite-plugin-cartographer": "^0.4.4",
     "@replit/vite-plugin-dev-banner": "^0.1.1",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
